--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -430,4 +430,6 @@
     <string name="prompt_ledger_phrase">Ledger Passphrase (advanced)</string>
     <string name="bad_ledger_seed">Invalid Ledger Seed!</string>
     <string name="prompt_ledger_seed_warn">Entering your Ledger Seed here is a major security risk!</string>
+
+    <string name="label_account" translatable="false">%1$s (%2$s)</string>
 </resources>
