--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -132,7 +132,7 @@
     <string name="bad_password">Falsches Passwort!</string>
     <string name="bad_saved_password">Hinterlegtes Passwort falsch.\nBitte Passwort manuell eingeben.</string>
     <string name="bad_wallet">Wallet existiert nicht!</string>
-    <string name="prompt_daemon_missing">Hintergrunddienst-Adresse muss gesetzt sein!</string>
+    <string name="prompt_daemon_missing">Node-Adresse muss gesetzt sein!</string>
     <string name="prompt_wrong_net">Wallet entspricht nicht dem ausgewähltem Netz</string>
 
     <string name="label_watchonly">(View-Only)</string>
@@ -333,7 +333,7 @@
     <string name="nfc_tag_read_success">Tag erfolgreich gelesen</string>
     <string name="nfc_tag_tap">NFC verfügbar!</string>
 
-    <string name="status_wallet_connect_wrongversion">Hintergrunddienst-Version des Nodes inkompatibel – bitte updaten!</string>
+    <string name="status_wallet_connect_wrongversion">Node Version inkompatibel – bitte updaten!</string>
 
     <string name="menu_info">Zeige Geheimnisse!</string><!--Changed to: Show Secrets!-->
     <string name="menu_streetmode">Straßenmodus</string>
