verify monero app is running on nano

--- a/app/src/main/res/values-cat/strings.xml
+++ b/app/src/main/res/values-cat/strings.xml
@@ -379,4 +379,6 @@
     <string name="prompt_ledger_phrase">Contrasenya Ledger (avançat)</string>
     <string name="bad_ledger_seed">Llavor de Ledger no vàlida!</string>
     <string name="prompt_ledger_seed_warn">Introduir la vostra llavor del Ledger aquí té un elevat risc de seguretat!</string>
+
+    <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
 </resources>
