--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -385,4 +385,6 @@
     <string name="prompt_ledger_phrase">Mot de passe Ledger (optionnel)</string>
     <string name="bad_ledger_seed">Phrase mnémonique Ledger invalide !</string>
     <string name="prompt_ledger_seed_warn">Saisir votre phrase mnémonique Ledger ici est un risque majeur de sécurité !</string>
+
+    <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
 </resources>
