--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -373,4 +373,6 @@
     <string name="prompt_ledger_phrase">Senha da Ledger (opcional)</string>
     <string name="bad_ledger_seed">Semente da Ledger inválida!</string>
     <string name="prompt_ledger_seed_warn">Escrever a semente da sua Ledger aqui é um grande risco de segurança!</string>
+
+    <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
 </resources>
