--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -382,4 +382,5 @@
     <string name="bad_ledger_seed">Nevalidno seme iz knjige računa!</string>
     <string name="prompt_ledger_seed_warn">Unošenje tvog semena iz knjige računa na ovom mestu ima veliki sigurnosni rizik!</string>
 
+    <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
 </resources>
