--- a/app/src/main/res/values-ua/strings.xml
+++ b/app/src/main/res/values-ua/strings.xml
@@ -385,4 +385,6 @@
     <string name="prompt_ledger_phrase">Ledger Passphrase (optional)</string>
     <string name="bad_ledger_seed">Invalid Ledger Seed!</string>
     <string name="prompt_ledger_seed_warn">Entering your Ledger Seed here is a major security risk!</string>
+
+    <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
 </resources>
