--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -380,4 +380,6 @@
     <string name="prompt_ledger_phrase">Ledger 密碼 (選填)</string>
     <string name="bad_ledger_seed">無效的 Ledger 種子碼！</string>
     <string name="prompt_ledger_seed_warn">在此輸入 Ledger 種子碼可能存在嚴重的安全風險！</string>
+
+    <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
 </resources>
