--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -432,4 +432,6 @@
     <string name="prompt_ledger_seed_warn">Entering your Ledger Seed here is a major security risk!</string>
 
     <string name="label_account" translatable="false">%1$s (%2$s)</string>
+
+    <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
 </resources>
