show restore height

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -383,5 +383,7 @@
     <string name="bad_ledger_seed">Ungültiger Ledger-Seed!</string>
     <string name="prompt_ledger_seed_warn">Deinen Ledger-Seed hier einzugeben, stellt ein erhebliches Sicherheitsrisiko dar!</string>
 
+    <string name="label_restoreheight">Wiederherstellungshöhe</string>
+
     <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
 </resources>
