--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -385,5 +385,7 @@
     <string name="bad_ledger_seed">Seed di Ledger invalido!</string>
     <string name="prompt_ledger_seed_warn">Inserire il tuo seed di Ledger qui è un grosso rischio!</string>
 
+    <string name="label_restoreheight">Altezza di ripristino</string> <!-- Restore Height -->
+
     <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
 </resources>
