--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -382,5 +382,7 @@
     <string name="bad_ledger_seed">Invalid Ledger Seed!</string>
     <string name="prompt_ledger_seed_warn">Entering your Ledger Seed here is a major security risk!</string>
 
+    <string name="label_restoreheight">Restaŭralteco</string> <!-- Restore Height -->
+
     <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
 </resources>
