--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -386,5 +386,7 @@
     <string name="bad_ledger_seed">Semente do Ledger invalida!</string>
     <string name="prompt_ledger_seed_warn">Introduzir a semente do Ledger aqui comporta um elevado risco de segurança!</string>
 
+    <string name="label_restoreheight">Restaurar de Altura</string> <!-- Restore Height -->
+
     <string name="toast_ledger_start_app">Start Monero App on %1$s</string>
 </resources>
